force-app/main/default/objects/Financial__c/Financial__c.object-meta.xml
<CustomObject>
    <label>Financial</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Forecast Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>