force-app/main/default/objects/Financial__c/fields/Actual_Gross_Profit_JTD_NM__c.field-meta.xml
<CustomField>
    <fullName>Actual_Gross_Profit_JTD_NM__c</fullName>
    <formula>IF (ABS(Job_to_Date_Work_Billed_Next_Month__c) &gt;0,((Job_to_Date_Work_Billed_Next_Month__c - Job_to_Date_Costs_Next_Month_Costs__c)  / ABS(Job_to_Date_Work_Billed_Next_Month__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Gross Profit % (JTD-NM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>