force-app/main/default/objects/Financial__c/fields/Amount_not_billed__c.field-meta.xml
<CustomField>
    <fullName>Amount_not_billed__c</fullName>
    <formula>ATI_Job__r.Amount__c - Job_to_Date_Work_Billed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount not billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>