force-app/main/default/objects/Financial__c/fields/Estimate_Amount_JTD_worked_billed__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Amount_JTD_worked_billed__c</fullName>
    <formula>IF(  ATI_Job__r.Amount__c  = Job_to_Date_Work_Billed__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Amount = JTD worked billed</label>
    <type>Checkbox</type>
</CustomField>