force-app/main/default/objects/Financial__c/fields/Forecast_Analysis_match__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Analysis_match__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Forecast Analysis match</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>