force-app/main/default/objects/Financial__c/fields/Forecast_Last_Timberline_Update__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Last_Timberline_Update__c</fullName>
    <label>Forecast Last Timberline Update</label>
    <type>DateTime</type>
</CustomField>