force-app/main/default/objects/Financial__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <description>Field to indicate the % of Gross Profit of the Job</description>
    <label>Estimated Gross Profit %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>