force-app/main/default/objects/Financial__c/fields/JC_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>JC_Adjustment__c</fullName>
    <description>Dollar difference between actual and forecast GP.</description>
    <formula>Round(((Job_to_Date_Work_Billed_Next_Month__c * (1-Gross_Profit__c))-Job_to_Date_Costs_Next_Month_Costs__c),-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JC Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>