force-app/main/default/objects/Financial__c/fields/Job_number__c.field-meta.xml
<CustomField>
    <fullName>Job_number__c</fullName>
    <formula>ATI_Job__r.Job_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job_number</label>
    <type>Text</type>
</CustomField>