force-app/main/default/objects/Financial__c/fields/Job_to_Date_Costs__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_Costs__c</fullName>
    <label>Job-to-Date Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>