force-app/main/default/objects/Financial__c/fields/Job_to_Date_Costs_Next_Month_Costs__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_Costs_Next_Month_Costs__c</fullName>
    <formula>Job_to_Date_Costs__c - Next_Month_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job-to-Date Costs - NM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>