force-app/main/default/objects/Financial__c/fields/Job_to_Date_Dollars_Paid__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_Dollars_Paid__c</fullName>
    <description>Field populated via Timberline integration to indicate dollars paid thus far</description>
    <label>Job-to-Date Dollars Paid-AP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>