force-app/main/default/objects/Financial__c/fields/Job_to_Date_GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_GP_Percent__c</fullName>
    <formula>IF (ABS( Job_to_Date_Work_Billed__c ) &gt;0,((Job_to_Date_Work_Billed__c -  Job_to_Date_Costs__c ) / ABS(Job_to_Date_Work_Billed__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job-to-Date GP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>