force-app/main/default/objects/Financial__c/fields/Job_to_Date_Payments__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_Payments__c</fullName>
    <description>Field populated via Timberline integration to indicate payments made to date.</description>
    <label>Job-to-Date Payments-AR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>