force-app/main/default/objects/Financial__c/fields/Job_to_Date_Work_Billed__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_Work_Billed__c</fullName>
    <description>Populated from Timberline-- amount that has been billed to the client thus far.</description>
    <label>Job-to-Date Work Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>