force-app/main/default/objects/Financial__c/fields/Job_to_Date_Work_Billed_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Job_to_Date_Work_Billed_Next_Month__c</fullName>
    <formula>Job_to_Date_Work_Billed__c - Next_Month_Work_Billed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job-to-Date Work Billed - NM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>