force-app/main/default/objects/Financial__c/fields/JTD_Costs_YTD_Costs__c.field-meta.xml
<CustomField>
    <fullName>JTD_Costs_YTD_Costs__c</fullName>
    <description>Job to date costs minus year to date costs</description>
    <formula>Job_to_Date_Costs__c - Year_to_Date_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JTD Costs - YTD Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>