force-app/main/default/objects/Financial__c/fields/JTD_NM_GP__c.field-meta.xml
<CustomField>
    <fullName>JTD_NM_GP__c</fullName>
    <formula>IF (ABS( Job_to_Date_Work_Billed_Next_Month__c) &gt; 0, (( Job_to_Date_Work_Billed_Next_Month__c - Job_to_Date_Costs_Next_Month_Costs__c) / ABS(Job_to_Date_Work_Billed_Next_Month__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job-to-Date - NM GP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>