force-app/main/default/objects/Financial__c/fields/JTD_NM_Profit__c.field-meta.xml
<CustomField>
    <fullName>JTD_NM_Profit__c</fullName>
    <formula>Job_to_Date_Work_Billed_Next_Month__c - Job_to_Date_Costs_Next_Month_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job-to-Date - NM GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>