force-app/main/default/objects/Financial__c/fields/Last_Month_Costs__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Costs__c</fullName>
    <description>Field populated via Timberline integration to indicate last month&apos;s costs related to the job.</description>
    <label>Last Month Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>