force-app/main/default/objects/Financial__c/fields/Last_Month_Dollars_Paid__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Dollars_Paid__c</fullName>
    <description>Field populated via Timberline integration to indicate dollars paid last month</description>
    <label>Last Month Dollars Paid-AP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>