force-app/main/default/objects/Financial__c/fields/Last_Month_Work_Billed__c.field-meta.xml
<CustomField>
    <fullName>Last_Month_Work_Billed__c</fullName>
    <description>Field populated via Timberline integration to indicate work billed last month.</description>
    <label>Last Month Work Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>