force-app/main/default/objects/Financial__c/fields/Last_Successful_Timberline_Forecast_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Successful_Timberline_Forecast_Sync__c</fullName>
    <description>Last successful push of Timberline fields being populated into SFDC Forecast Analysis section.</description>
    <label>Last Successful Timberline Forecast Sync</label>
    <type>DateTime</type>
</CustomField>