force-app/main/default/objects/Financial__c/fields/Month_to_Date_Costs__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Date_Costs__c</fullName>
    <description>Field populated via Timberline integration to indicate month-to-date costs.</description>
    <label>Month-to-Date Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>