force-app/main/default/objects/Financial__c/fields/Month_to_Date_Dollars_Paid__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Date_Dollars_Paid__c</fullName>
    <label>Month-to-Date Dollars Paid-AP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>