force-app/main/default/objects/Financial__c/fields/Month_to_Date_GP__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Date_GP__c</fullName>
    <formula>Month_to_Date_Work_Billed__c - Month_to_Date_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month-to-Date GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>