force-app/main/default/objects/Financial__c/fields/Month_to_Date_GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Date_GP_Percent__c</fullName>
    <formula>IF (ABS( Month_to_Date_Work_Billed__c ) &gt;0,(( Month_to_Date_Work_Billed__c - Month_to_Date_Costs__c ) / ABS(Month_to_Date_Work_Billed__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month-to-Date GP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>