force-app/main/default/objects/Financial__c/fields/Month_to_Date_Work_Billed__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Date_Work_Billed__c</fullName>
    <description>Field populated by Timberline integration to indicate month-to-date work billed.</description>
    <label>Month-to-Date Work Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>