force-app/main/default/objects/Financial__c/fields/MTD_Profit__c.field-meta.xml
<CustomField>
    <fullName>MTD_Profit__c</fullName>
    <formula>Month_to_Date_Work_Billed__c - Month_to_Date_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTD Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>