force-app/main/default/objects/Financial__c/fields/Next_Month_Costs__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Costs__c</fullName>
    <description>Field populated by Timberline integration to indicate costs allotted for next month.</description>
    <label>Next Month Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>