force-app/main/default/objects/Financial__c/fields/Next_Month_Dollars_Paid__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Dollars_Paid__c</fullName>
    <description>Field populated via Timberline integration to indicate dollars paid for next month.</description>
    <label>Next Month Dollars Paid-AP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>