force-app/main/default/objects/Financial__c/fields/Next_Month_Work_Billed__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Work_Billed__c</fullName>
    <description>Field populated via Timberline integration to indicate the work billed for next month.</description>
    <label>Next Month Work Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>