force-app/main/default/objects/Financial__c/fields/Quarter_to_Date_Costs__c.field-meta.xml
<CustomField>
    <fullName>Quarter_to_Date_Costs__c</fullName>
    <description>Field populated via Timberline integration to indicate the work billed for next month.</description>
    <label>Quarter-to-Date Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>