force-app/main/default/objects/Financial__c/fields/Quarter_to_Date_GP__c.field-meta.xml
<CustomField>
    <fullName>Quarter_to_Date_GP__c</fullName>
    <formula>Quarter_to_Date_Work_Billed__c - Quarter_to_Date_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter-to-Date GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>