force-app/main/default/objects/Financial__c/fields/Quarter_to_Date_GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>Quarter_to_Date_GP_Percent__c</fullName>
    <formula>IF (ABS( Quarter_to_Date_Work_Billed__c ) &gt;0,(( Quarter_to_Date_Work_Billed__c - Quarter_to_Date_Costs__c  ) / ABS(Quarter_to_Date_Work_Billed__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter-to-Date GP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>