force-app/main/default/objects/Financial__c/fields/Quarter_to_Date_Work_Billed__c.field-meta.xml
<CustomField>
    <fullName>Quarter_to_Date_Work_Billed__c</fullName>
    <description>Field populated via Timberline integration to indicate work billed this quarter.</description>
    <label>Quarter-to-Date Work Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>