force-app/main/default/objects/Financial__c/fields/Receivable_Balance__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Balance__c</fullName>
    <label>Receivable Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>