force-app/main/default/objects/Financial__c/fields/Receivable_Includes_Retention__c.field-meta.xml
<CustomField>
    <fullName>Receivable_Includes_Retention__c</fullName>
    <formula>Receivable_Balance__c +  Retention_Receivable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receivable Includes Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>