force-app/main/default/objects/Financial__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <externalId>true</externalId>
    <label>ReferenceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>