force-app/main/default/objects/Financial__c/fields/Retention_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Retention_Receivable__c</fullName>
    <label>Retention Receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>