force-app/main/default/objects/Financial__c/fields/Timberline_GPM__c.field-meta.xml
<CustomField>
    <fullName>Timberline_GPM__c</fullName>
    <formula>ROUND(Gross_Profit__c*100,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timberline GPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>