force-app/main/default/objects/Financial__c/fields/Total_Billing_Forecast_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billing_Forecast_Amount__c</fullName>
    <formula>ATI_Job__r.Total_Billing_Forecast_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billing Forecast Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>