force-app/main/default/objects/Financial__c/fields/Update_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Update_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updates forecast information for this Job. If the updated forecast information does not show immediately, please wait a minute and refresh the Job page.</description>
    <inlineHelpText>Updates forecast information for this Job. If the updated forecast information does not show immediately, please wait a minute and refresh the Job page.</inlineHelpText>
    <label>Update Forecast</label>
    <type>Checkbox</type>
</CustomField>