force-app/main/default/objects/Financial__c/fields/Year_to_Date_Costs__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_Costs__c</fullName>
    <description>Field populated via integration with Timberline to indicate costs incurred this year.</description>
    <label>Year-to-Date Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>