force-app/main/default/objects/Financial__c/fields/Year_to_Date_Costs_Next_Month_Cost__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_Costs_Next_Month_Cost__c</fullName>
    <description>Year to date costs minus next months costs</description>
    <formula>Year_to_Date_Costs__c - Next_Month_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year-to-Date Costs - NM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>