force-app/main/default/objects/Financial__c/fields/Year_to_Date_GP__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_GP__c</fullName>
    <formula>Year_to_Date_Work_Billed__c - Year_to_Date_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year-to-Date GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>