force-app/main/default/objects/Financial__c/fields/Year_to_Date_NM_GP_Percent__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_NM_GP_Percent__c</fullName>
    <formula>IF (ABS( Year_to_Date_Work_Billed_Next_Month__c ) &gt;0,(( Year_to_Date_Work_Billed_Next_Month__c - Year_to_Date_Costs_Next_Month_Cost__c ) / ABS(Year_to_Date_Work_Billed_Next_Month__c )),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year-to-Date - NM GP%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>