force-app/main/default/objects/Financial__c/fields/Year_to_Date_Work_Billed__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_Work_Billed__c</fullName>
    <description>Field populated via Timberline integration to indicate work billed this year.</description>
    <label>Year-to-Date Work Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>