force-app/main/default/objects/Financial__c/fields/Year_to_Date_Work_Billed_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_to_Date_Work_Billed_Next_Month__c</fullName>
    <description>Year to date work billed minus next month work billed</description>
    <formula>Year_to_Date_Work_Billed__c - Next_Month_Work_Billed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year-to-Date Work Billed - NM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>