force-app/main/default/objects/Financial__c/fields/YTD_Billing_Forecast__c.field-meta.xml
<CustomField>
    <fullName>YTD_Billing_Forecast__c</fullName>
    <description>Roll-up summary to add the Forecast Amounts of all children Billing Forecast records since the start of the current year. we need to find a solution to update this field with respect to billing forecast.</description>
    <label>YTD Billing Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>