force-app/main/default/objects/Financial__c/validationRules/Estimated_GP_can_only_be_decreased.validationRule-meta.xml
<ValidationRule>
    <fullName>Estimated_GP_can_only_be_decreased</fullName>
    <active>true</active>
    <description>Only Accounting can increase estimated GP%</description>
    <errorConditionFormula>ISCHANGED( Gross_Profit__c ) &amp;&amp;
PRIORVALUE( Gross_Profit__c )&lt; Gross_Profit__c &amp;&amp;
$Profile.Name &lt;&gt; &quot;Restricted Process Execution&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;Accounting&quot;</errorConditionFormula>
    <errorDisplayField>Gross_Profit__c</errorDisplayField>
    <errorMessage>Estimated GP% can only be decreased. Please contact Accounting for assistance.</errorMessage>
</ValidationRule>