force-app/main/default/objects/Financial__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_to_Date_Payments__c</columns>
    <columns>Job_to_Date_Work_Billed__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_to_Date_Work_Billed__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Job_to_Date_Work_Billed__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>